[package]
name = "gma3-cue-display-tauri"
version = "1.0.0"
description = "Real-time cue display for GrandMA3 lighting consoles via OSC"
authors = ["Aaron Larson"]
edition = "2021"

[lib]
name = "gma3_cue_display_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rosc = "0.10"
warp = "0.3"
futures = "0.3"
local-ip-address = "0.6"
once_cell = "1"
parking_lot = "0.12"
chrono = "0.4"
regex = "1"
open = "5"

